chore(nvim): update plugins

--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -69,7 +69,7 @@ behind = "[${count}](red) "
 diverged = "[${ahead_count} ${behind_count}](purple) "
 untracked = "[󰋖](cyan) "
 stashed = "[󰇁](cyan) "
-modified = "[](yellow) "
+modified = "[󰜥](yellow) "
 staged = "[](green) "
 renamed = "[󰁕](purple) "
 deleted = "[](red) "
