--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -63,7 +63,7 @@ tag_symbol = '  '
 [git_status]
 style = "bold red"
 format = '[$all_status$ahead_behind]($style)'
-conflicted = "[](red) "
+conflicted = "[](red) "
 ahead = "[${count}](green) "
 behind = "[${count}](red) "
 diverged = "[${ahead_count} ${behind_count}](purple) "
